# GOTTCHA2

./: .gitlab-ci.yml  .travis.yml  CHANGELOG  LICENSE  README.md  environment.yml  gottcha.py  gottcha2.py  gottcha_taxonomy.py  gtdb_taxonomy.py  pull_database.py  pyproject.toml  requirements.txt  setup.py  taxonomy.py
.github/workflows/: gottcha.yml
docs/: Introduction.rst  conf.py  gottcha2.rst  index.rst
gottcha/: __init__.py
gottcha/scripts/: cmd.py  extract_taxa_reads.py  gottcha2.py  gottcha_sam_to_bam.py  pull_database.py  taxonomy.py
gottcha2/: cmd.py  gottcha2.py  pull_database.py
test/: test_gottcha2.py  test_gottcha2_cli.py  test_gottcha2_integration.py  test_taxonomy.py
test/database/: Ebola.species.fna  Ebola.species.fna.mmi  Ebola.species.fna.stats  Ebola.species.fna.stats.fullname  Ebola.species.fna.tax.tsv  names.dmp  nodes.dmp
