[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gottcha", "gottcha.scripts"]

[project]
name = "GOTTCHA2"
version = "2.1.8.5"  
description = "Genomic Origin Through Taxonomic CHAllenge (GOTTCHA) v2"
readme = "README.md"
authors = [
    {name = "Po-E Li", email = "po-e@lanl.gov"}
]
license = {file = "LICENSE"}
keywords = ["bioinformatics", "taxonomy", "profiler"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "numpy>=1.26.2",
  "pandas>=2.1.1",
  "requests>=2.31.0",
  "tqdm>=4.66.1",
]

[project.scripts]
gottcha2 = "gottcha.scripts.cmd:gottcha2_command"

[project.urls]
Homepage = "https://github.com/poeli/GOTTCHA2/tree/master"
